infra/manifests/ingress-ntc.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ntc-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  tls:
    - hosts:
        - ntc-pdf-converter.poire.dev
      secretName: poire.dev-wildcard-tls
  rules:
    - host: ntc-pdf-converter.poire.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: website
              servicePort: 9000
          - path: /files
            backend:
              serviceName: website-files
              servicePort: 9000
