infra/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: public-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - momoperes.ca
        - defiant.momoperes.ca
        - charts.momoperes.ca
      secretName: momoperes.ca-wildcard-tls
    - hosts:
        - abitibitemiscamingueesports.club
      secretName: abitibi-wildcard-tls
    - hosts:
        - poire.dev
      secretName: poire.dev-wildcard-tls
     - hosts:
        - aramperes.ca
      secretName: aramperes.ca-wildcard-tls
  rules:
    - host: momoperes.ca
      http:
        paths:
          - path: /
            backend:
              serviceName: website
              servicePort: 9000
          - path: /files
            backend:
              serviceName: website-files
              servicePort: 9000
    - host: defiant.momoperes.ca
      http:
        paths:
          - path: /
            backend:
              serviceName: defiant
              servicePort: 80
    - host: charts.momoperes.ca
      http:
        paths:
          - path: /
            backend:
              serviceName: chartmuseum
              servicePort: 8080
    - host: abitibitemiscamingueesports.club
      http:
        paths:
          - path: /
            backend:
              serviceName: abitibi
              servicePort: 9000
    - host: poire.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: website
              servicePort: 9000
          - path: /files
            backend:
              serviceName: website-files
              servicePort: 9000
    - host: aramperes.ca
      http:
        paths:
          - path: /
            backend:
              serviceName: website
              servicePort: 9000
          - path: /files
            backend:
              serviceName: website-files
              servicePort: 9000
